--- a/index.html
+++ b/index.html
@@ -1,22 +1,71 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- =========================================================
+         BASIC META
+    ========================================================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Advanced Civil Solutions</title>
 
-    <!-- Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- =========================================================
+         SEO
+    ========================================================== -->
+    <meta
+      name="description"
+      content="Advanced Civil Solutions helps teams win and deliver government contracts with compliant sourcing, clean documentation, and on-time execution."
+    />
+
+    <link
+      rel="canonical"
+      href="https://advanced-civil-solutions.pages.dev/"
+    />
+
+    <!-- =========================================================
+         OPEN GRAPH (Social Sharing)
+    ========================================================== -->
+    <meta property="og:title" content="Advanced Civil Solutions" />
+    <meta
+      property="og:description"
+      content="We help companies win and deliver government contracts — with compliant sourcing, clean documentation, and on-time execution."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://advanced-civil-solutions.pages.dev/"
+    />
+    <!-- Optional: add when you create a preview image -->
+    <!-- <meta property="og:image" content="https://advanced-civil-solutions.pages.dev/og-image.png" /> -->
+
+    <!-- =========================================================
+         TWITTER CARD
+    ========================================================== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Advanced Civil Solutions" />
+    <meta
+      name="twitter:description"
+      content="We help companies win and deliver government contracts — with compliant sourcing, clean documentation, and on-time execution."
+    />
+    <!-- Optional -->
+    <!-- <meta name="twitter:image" content="https://advanced-civil-solutions.pages.dev/og-image.png" /> -->
+
+    <!-- =========================================================
+         GOOGLE FONTS (Performance Optimized)
+    ========================================================== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Source+Serif+4:opsz,wght@8..60,400;600;700;800&display=swap"
       rel="stylesheet"
     />
-
   </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- Vite entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
